--- a/about.html
+++ b/about.html
@@ -1,1 +1,18 @@
-<h1>This is the about page!</h1>
+<!DOCTYPE html>
+
+<html>
+<head>
+	<title>About us</title>
+	<link rel="stylesheet" href="./reset.css">
+	<link rel="stylesheet" href="./style.css">
+</head>
+<body>
+
+	<h1>This is the about page!</h1>
+
+	<button>Style me!</button>
+	<button class="button-two">Style me, too!</button>
+	<button class="button-two" id="third-button">I'm the third button</button>
+
+	</body>
+</html>
