--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>This is my webpage!</title>
+	<link rel="stylesheet" href="./reset.css">
+	<link rel="stylesheet" href="./style.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 </head>
 <body>
 <!-- header -->
@@ -11,19 +14,20 @@
 			<a href="./index.html">Home</a>
 		</li>
 		<li>
-			<a href="./about.html">about</a
+			<a href="./about.html">About my web page</a
 		</li>
-		<li><a href="http://www.bbc.co.uk/"></a>
+		<li>
+			<a href="http://www.bbc.co.uk/">BBC</a>
 		</li>
 	</ul>	
 </header>
 
 <!-- remove the inline CSS when stylesheet is made! -->
-<img src="./img/lake.jpeg" style="max-width:100%;">
-<div>
+<!-- <img src="./img/lake.jpeg" style="max-width:100%;"> -->
 
-
-
+<div class="hero hero--lake">
+	<h1>Welcome</h1>
+</div>
 
 <!-- P Div : text -->
 
